Add Vertx JsonObject and JsonArray support to RESTEasy Reactive
    Fixes: #14668