@@ -1,5 +1,6 @@
 package io.quarkus.resteasy.reactive.jsonb.deployment.processor;
 
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
@@ -21,11 +22,11 @@ import io.quarkus.resteasy.reactive.spi.MessageBodyWriterBuildItem;
 
 public class ResteasyReactiveJsonbProcessor {
 
-    private static final List<String> VERTX_SERIALIZERS = List.of(
+    private static final List<String> VERTX_SERIALIZERS = Arrays.asList(
             VertxJson.JsonObjectSerializer.class.getName(),
             VertxJson.JsonArraySerializer.class.getName());
 
-    private static final List<String> VERTX_DESERIALIZERS = List.of(
+    private static final List<String> VERTX_DESERIALIZERS = Arrays.asList(
             VertxJson.JsonObjectDeserializer.class.getName(),
             VertxJson.JsonArrayDeserializer.class.getName());
 
